--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-h5-audio-player": "^3.4.1",
     "react-pdf": "^5.0.0",
     "sass": "^1.26.11",
+    "swr": "^0.3.4",
     "use-scroll-lock": "^1.0.0"
   },
   "devDependencies": {
