--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "formik": "^2.1.5",
+    "framer-motion": "^2.7.7",
     "google-map-react": "^2.1.6",
     "gsap": "^3.5.1",
+    "material-table": "^1.69.1",
+    "moment": "^2.29.0",
     "next": "9.5.3",
     "pg": "^8.3.3",
     "react": "16.13.1",
