--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3005",
     "build": "next build",
     "start": "next start"
   },
@@ -17,7 +17,7 @@
     "gsap": "^3.5.1",
     "material-table": "^1.69.1",
     "moment": "^2.29.0",
-    "next": "9.5.3",
+    "next": "^10.0.3",
     "pg": "^8.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
