--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "dotenv": "^8.2.0",
     "formik": "^2.1.5",
     "framer-motion": "^2.7.7",
     "google-map-react": "^2.1.6",
     "gsap": "^3.6.0",
     "moment": "^2.29.0",
     "next": "^10.0.9",
+    "nodemailer": "^6.6.0",
     "pg": "^8.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
